# sRNA_target_hybridization

./: README.md  calc_pval.py  data_prep_initial.py  landing.py  pyproject.toml  start.py  start2.py
prep/: data_prep_initial.py
