# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srna_hybridization"
version = "0.1"
description = "..."
readme = "README.md"
authors = [{ name = "RS", email = "" }]

[project.scripts]
srna_hybridization = "srna_hybridization.__main__:main"
